--- a/newsApp/Base.lproj/Main.storyboard
+++ b/newsApp/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="iOS 13.0 system colors" minToolsVersion="11.0"/>
     </dependencies>
     <scenes>
-        <!--News List-->
+        <!--News App-->
         <scene sceneID="Kdp-Ig-gDA">
             <objects>
                 <viewController id="zPB-zP-bDz" customClass="NewsList" customModule="newsApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -36,7 +36,7 @@
                                     <constraint firstAttribute="height" constant="60" id="OP5-dJ-5Pc"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="faA-LE-gPe">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="faA-LE-gPe">
                                 <rect key="frame" x="0.0" y="80" width="414" height="756"/>
                                 <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
@@ -106,6 +106,7 @@
                         <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="faA-LE-gPe" firstAttribute="leading" secondItem="OyR-nm-Lsa" secondAttribute="leading" id="3vW-bf-CHX"/>
+                            <constraint firstItem="faA-LE-gPe" firstAttribute="top" secondItem="7UD-kH-Wik" secondAttribute="topMargin" constant="80" id="9Es-iI-hJS"/>
                             <constraint firstItem="dew-E5-luv" firstAttribute="trailing" secondItem="OyR-nm-Lsa" secondAttribute="trailing" id="EJD-rQ-0ZA"/>
                             <constraint firstAttribute="bottom" secondItem="dew-E5-luv" secondAttribute="bottom" id="W5y-c0-GoO"/>
                             <constraint firstAttribute="bottom" secondItem="dew-E5-luv" secondAttribute="bottom" id="beI-OU-Vl0"/>
@@ -115,7 +116,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="OyR-nm-Lsa"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Xnn-SI-2Ao"/>
+                    <navigationItem key="navigationItem" title="News App" id="Xnn-SI-2Ao"/>
                     <connections>
                         <outlet property="tableView" destination="faA-LE-gPe" id="cyR-5Y-hh5"/>
                         <segue destination="lo4-Ze-wGN" kind="show" identifier="goToNewsDetails" id="RHo-eP-aJ4"/>
@@ -133,7 +134,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xtw-a8-XWr">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xtw-a8-XWr">
                                 <rect key="frame" x="0.0" y="836" width="414" height="60"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="systemOrangeColor"/>
                                 <constraints>
@@ -142,6 +143,11 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xtw-a8-XWr" firstAttribute="centerX" secondItem="xQi-zW-25Z" secondAttribute="centerX" id="7TL-IO-mZH"/>
+                            <constraint firstItem="xtw-a8-XWr" firstAttribute="leading" secondItem="RqC-ic-MfG" secondAttribute="leading" id="KVR-Wj-Vjz"/>
+                            <constraint firstItem="xtw-a8-XWr" firstAttribute="top" secondItem="RqC-ic-MfG" secondAttribute="top" constant="748" id="ewo-rn-x3q"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="RqC-ic-MfG"/>
                     </view>
                 </viewController>
@@ -168,7 +174,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2g5-vR-VcL">
                                 <rect key="frame" x="0.0" y="88" width="414" height="748"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vah-Cq-Tvw">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vah-Cq-Tvw" customClass="ArticleDetailView" customModule="newsApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="748"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yZs-ZI-Pic" customClass="NewsImage" customModule="newsApp" customModuleProvider="target">
@@ -177,8 +183,8 @@
                                                     <constraint firstAttribute="height" constant="242" id="lRP-Ht-3C4"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXQ-dH-hNV">
-                                                <rect key="frame" x="12" y="429.5" width="390" height="310.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXQ-dH-hNV">
+                                                <rect key="frame" x="12" y="429.5" width="390" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -195,17 +201,14 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="282" translatesAutoresizingMaskIntoConstraints="NO" id="vou-VT-UIT">
                                                 <rect key="frame" x="12" y="250" width="390" height="20.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rm-Yj-l19">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rm-Yj-l19">
                                                         <rect key="frame" x="0.0" y="0.0" width="61" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Writer" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIF-hk-23v">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Writer" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIF-hk-23v">
                                                         <rect key="frame" x="343" y="0.0" width="47" height="20.5"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="47" id="0PF-yF-VzY"/>
-                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -223,11 +226,11 @@
                                             <constraint firstItem="OXQ-dH-hNV" firstAttribute="leading" secondItem="Vah-Cq-Tvw" secondAttribute="leading" constant="12" id="JRo-je-VO7"/>
                                             <constraint firstAttribute="trailing" secondItem="vou-VT-UIT" secondAttribute="trailing" constant="12" id="Ng7-sg-U2w"/>
                                             <constraint firstItem="yZs-ZI-Pic" firstAttribute="leading" secondItem="Vah-Cq-Tvw" secondAttribute="leading" constant="12" id="PMV-pk-VOT"/>
-                                            <constraint firstAttribute="bottom" secondItem="OXQ-dH-hNV" secondAttribute="bottom" constant="8" id="Uzk-t0-t1r"/>
                                             <constraint firstAttribute="trailing" secondItem="Hxx-wx-exQ" secondAttribute="trailing" constant="12" id="YOn-iz-WEQ"/>
                                             <constraint firstItem="vou-VT-UIT" firstAttribute="leading" secondItem="Vah-Cq-Tvw" secondAttribute="leading" constant="12" id="k0f-GR-Ooq"/>
                                             <constraint firstItem="yZs-ZI-Pic" firstAttribute="top" secondItem="Vah-Cq-Tvw" secondAttribute="top" id="lUc-5H-nRu"/>
                                             <constraint firstItem="Hxx-wx-exQ" firstAttribute="top" secondItem="vou-VT-UIT" secondAttribute="bottom" constant="12" id="mpe-3a-qtK"/>
+                                            <constraint firstAttribute="bottom" secondItem="OXQ-dH-hNV" secondAttribute="bottom" constant="298" id="qmO-5b-ROK"/>
                                             <constraint firstAttribute="trailing" secondItem="yZs-ZI-Pic" secondAttribute="trailing" constant="12" id="sAR-Dm-iGn"/>
                                             <constraint firstAttribute="trailing" secondItem="Hxx-wx-exQ" secondAttribute="trailing" constant="12" id="sfD-wJ-N9M"/>
                                             <constraint firstItem="vou-VT-UIT" firstAttribute="top" secondItem="yZs-ZI-Pic" secondAttribute="bottom" constant="8" id="x4Q-nH-GVt"/>
@@ -262,6 +265,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qwK-9Q-eMT"/>
                     </view>
+                    <connections>
+                        <outlet property="articleContent" destination="OXQ-dH-hNV" id="Wcx-Sn-350"/>
+                        <outlet property="articleHeadline" destination="Hxx-wx-exQ" id="5v3-SN-V5e"/>
+                        <outlet property="articleImage" destination="yZs-ZI-Pic" id="Xuw-sn-NO4"/>
+                        <outlet property="articleSource" destination="9Rm-Yj-l19" id="1bY-HC-Zvd"/>
+                        <outlet property="articleWriter" destination="qIF-hk-23v" id="6Yv-RH-aST"/>
+                        <outlet property="scrollView" destination="2g5-vR-VcL" id="cBZ-hZ-XZL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOj-xK-bGF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
